animation added. radio buttons designed

--- a/src/components/filter/style.css
+++ b/src/components/filter/style.css
@@ -11,3 +11,8 @@
 .filter-wrapper > div {
   margin-top: 10px;
 }
+
+.filter-wrapper > div > span {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-right: 10px;
+}
