--- a/src/components/content/style.css
+++ b/src/components/content/style.css
@@ -5,15 +5,18 @@
   align-items: center;
 
   border: 1px solid #eeeeee;
+  border-left: none;
   padding: 15px;
   width: 100%;
 }
 
-.content-wrapper input {
+.content-wrapper input[type="text"] {
   height: 16px;
   padding: 15px;
   width: 80%;
   font-size: 16px;
   font-style: italic;
   text-align: center;
+  border-radius: 8px;
+  border: 1px solid #eeeeee;
 }
