--- a/src/components/filter/style.css
+++ b/src/components/filter/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   padding: 15px;
   width: 100px;
 }
