--- a/src/components/content/style.css
+++ b/src/components/content/style.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
 
-  border: 1px solid #eeeeee;
   border-left: none;
   padding: 15px;
   width: 100%;
@@ -19,4 +18,16 @@
   text-align: center;
   border-radius: 8px;
   border: 1px solid #eeeeee;
+}
+
+.guid-input-wrapper {
+  display: flex;
+}
+
+.guid-input-wrapper .copy-button {
+  padding: 14px 10px 14px 10px;
+  border-radius: 8px;
+  border: 1px solid #eeeeee;
+  cursor: pointer;
+  margin-left: 5px;
 }
