--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   text-align: left;
 }
