--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,6 +1,7 @@
 body {
   padding: 25px;
   font-family: Ubuntu;
+  background-color: #eeeeee;
 }
 
 textarea,
@@ -8,4 +9,11 @@ select,
 input,
 button {
   outline: none;
+}
+
+.main-wrapper {
+  border: 1px solid #eeeeee;
+  background-color: #ffffff;
+  border-radius: 15px;
+  padding: 15px;
 }
